# cube-solver

./: README.md  cube-solver.cabal
app/: Main.hs
src/: BluetoothCube.hs
src/CubeSolver/: AlgExpr.hs  Cube.hs  CubeParser.hs  CubeState.hs  CubeValidator.hs  PDFCube.hs  Triggers.hs
src/CubeSolver/CFOP/: CFOP.hs  Cross.hs  F2L.hs  OLL.hs  PLL.hs
src/bluetooth/: package-lock.json
test/: CubeSolverTest.hs
